@@ -1,3 +1,12 @@
+2008-10-01  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* binutils-all/group-2.s: New.
+	* binutils-all/strip-4.d: Likewise.
+	* binutils-all/strip-5.d: Likewise.
+
+	* binutils-all/objcopy.exp: Test objcopy on group-2.s.  Run
+	strip-4 and strip-5.
+
 2008-07-26  Alan Modra  <amodra@bigpond.net.au>
 
 	* binutils-all/objdump.exp: Run compressed debug test only for ELF.
